0031120: Memory leak in BRepOffsetAPI_MakeOffset

Add destructor of MAT2d_Mat2d - full removal of edges and bisectors.