src/MAT/MAT_ListOfBisector.hxx
@@ -36,8 +36,9 @@ class MAT_ListOfBisector : public Standard_Transient
 
 public:
 
-  
   Standard_EXPORT MAT_ListOfBisector();
+  
+  Standard_EXPORT ~MAT_ListOfBisector();
   
   Standard_EXPORT void First();
   
