src/MAT/MAT_ListOfEdge.hxx
@@ -36,8 +36,9 @@ class MAT_ListOfEdge : public Standard_Transient
 
 public:
 
-  
   Standard_EXPORT MAT_ListOfEdge();
+
+  Standard_EXPORT ~MAT_ListOfEdge();
   
   Standard_EXPORT void First();
   
